--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@ background: url(http://akum1.fox-fox.online/tovary/images/sale-bg.png) 0 0 no-re
                 </div>
                 <div class="price_item new">
                     <div class="text"><span>Ви заощаджуєте -40%</span></div>
-                    <div class="value">2499 грн</div>
+                    <div class="value">від 2499 грн</div>
                 </div>
             </div>
             
